--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://marciovm.com
 title: Marcio von Muhlen
 subtitle: Thoughts to Bits
 author: Marcio von Muhlen
-simple_search: http://google.com/search
+simple_search: 
 description:
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
